# perplexity-mcp

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml  smithery.yaml
src/perplexity_mcp/: __init__.py  pyproject.toml  server.py
