[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-mcp"
version = "0.1.4"
requires-python = ">=3.11"
readme = "README.md"
description = "Perplexity MCP Server"
dependencies = [
    "aiohttp",
    "pydantic",
    "mcp>=1.0.2",
]

[project.scripts]
perplexity-mcp = "perplexity_mcp.server:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_mcp"]

[tool.hatch.metadata]
allow-direct-references = true