[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexity-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Perplexity AI web search"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jason Allen", email = "jason@citystory.com" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "mcp[cli]>=1.1.2",
    "perplexity-api>=0.1.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
perplexity-mcp = "perplexity_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perplexity_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
